Adding more memory for tests