@@ -239,6 +239,9 @@
                                 </goals>
                             </execution>
                         </executions>
+                        <configuration>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+                        </configuration>
                     </plugin>
 
                     <plugin>
